--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ theme: fluid
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/korin5/korin5.github.io.git
+  repo: https://github.com/korin5/korin5.github.io
   branch: main
