--- a/_config.Kratos-Rebirth.yml
+++ b/_config.Kratos-Rebirth.yml
@@ -97,7 +97,7 @@ psr:
 posts:
   show_cc: true
   donate: false
-  share: true
+  share: false
   comments: 
     provider: ''
     enableBGImage: false
@@ -178,7 +178,7 @@ aplayer:
 sidebar: right
 widgets:
 - about
-# - splitter
+- splitter
 - toc
 - category
 - tagcloud
@@ -203,9 +203,9 @@ search:
 jsconfig:
   main:
     cover:
-      randomAmount: 20 # 表示从1~20
-      baseUrl: null # 使用默认值（不单独配置），将跟随 vendors 中的相关设定选择是否使用 cdn
-      filenameTemplate: "thumb_{no}.webp" 
+      randomAmount: 39 # 表示从1~20
+      baseUrl: /images/thumb/ # 使用默认值（不单独配置），将跟随 vendors 中的相关设定选择是否使用 cdn
+      filenameTemplate: "trumb ({no}).webp" 
     createTime: "2023/01/30 15:40:00"
     donateBtn: "捐助我~"
     scanNotice: "扫一扫，好不好？"
@@ -216,7 +216,7 @@ jsconfig:
     returnTitle: "(*´∇｀*)欸，又好啦~"
     copyrightNotice: "该内容采用 CC BY-NC-SA 4.0 许可协议，著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。"
     expire_day: 30
-    topNavScrollToggle: true
+    topNavScrollToggle: false
 
 # Site verify 站点验证相关配置内容
 site_verify:
