--- a/_config.Kratos-Rebirth.yml
+++ b/_config.Kratos-Rebirth.yml
@@ -56,23 +56,46 @@ index:
   comment_count: false
 
 # Top Menu 顶部导航栏配置 （具体格式请参照文档）
-menu:
-  index: /
-  archives: /archives/
-  # friends: /friends/
-  # sites:
-  #   submenu: true
-  #   author: https://candinya.com
-  #   project: https://github.com/Candinya/Kratos-Rebirth
 
-label:
-  index: <i class="fa fa-home"></i>首页
-  archives: <i class="fa fa-file"></i>档案馆
-  # friends: <i class="fa fa-paw"></i>好伙伴
-  # sites:
-  #   submenu: <i class="fa fa-link"></i>链接
-  #   author: 作者博客
-  #   project: 项目链接
+# #旧
+# menu:
+#   index: /
+#   archives: /archives/
+#   # friends: /friends/
+#   sites:
+#     submenu: true
+#   #  author: https://candinya.com
+#     project: https://github.com/korin5/hexo
+#
+# label:
+#   index: <i class="fa fa-home"></i>首页
+#   archives: <i class="fa fa-file"></i>时间线
+#   # friends: <i class="fa fa-paw"></i>好伙伴
+#   sites:
+#     submenu: <i class="fa fa-link"></i>链接
+#   #  author: 作者博客
+#     project: 项目链接
+
+#----------------------------------------------------
+
+#新
+topMenu:
+  - label: 首页
+    icon: home
+    url: /
+  - label: 时间线
+    icon: calendar
+    url: /archives/
+  - label: Korin
+    icon: github
+    url: https://github.com/korin5
+  - label: 友情链接
+    icon: link
+    submenu:
+      - label: 添加
+        icon: plus
+        url: https://github.com/korin5/hexo/issues/new
+
 
 # Footer 页脚配置
 group_link: 
