取消移动端目录的序号

--- a/_config.Kratos-Rebirth.yml
+++ b/_config.Kratos-Rebirth.yml
@@ -209,7 +209,7 @@ widgets:
 avatarUri: /images/favicon.webp
 mobile_toc: 
   hide: false
-  hide_id: false
+  hide_id: true
 
 # Fancybox 文章内图片单击放大
 fancybox: true
