--- a/_config.Kratos-Rebirth.yml
+++ b/_config.Kratos-Rebirth.yml
@@ -95,7 +95,7 @@ topMenu:
 
 
 # Footer 页脚配置
-group_link: https://jq.qq.com/?_wv=1027&k=d1pEE8kD
+group_link: 
 contact: # 出于兼容性考虑，继续保留
   weibo: 
   mail: 
