--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: korin's Blog
+title: korin的个人博客
 subtitle: ''
 description: ''
 keywords:
