--- a/_config.myKratos-Rebirth.yml
+++ b/_config.myKratos-Rebirth.yml
@@ -4,7 +4,7 @@ hoster: <a href="https://github.io" target="_blank">Github Pages</a>
 site_logo: '/images/favicon.webp'
 snow: false
 click_animate_js: 'candy'
-# enable_dark: true
+enable_dark: true
 highlight_theme: night-eighties # 代码高亮主题（light | night | night-eighties | night-blue | night-bright）
 check_update: false
 
